Added main.html and save.html

--- a/pages/save.html
+++ b/pages/save.html
@@ -9,13 +9,12 @@
 <body>
     <header class="game-title">Life Simulator</header>
     <hr class="title-divider">
-    <section class="select-save-section">
-        <h1>Select Save File</h1>
-        <a href="/pages/save.html" class="button1">Save 1</a>
+    <section class="save-file-section">
+        <a href="/pages/main.html" class="button1">Load Game</a>
         <div></div>
-        <a href="/pages/save.html" class="button1">Save 2</a>
+        <a href="/index.html" class="button1">Delete Save</a>
         <div></div>
-        <a href="/pages/save.html" class="button1">Save 3</a>
+        <a href="/index.html" class="button1">Back</a>
         <div></div>
     </section>
 </body>
